# core

./: Cargo.toml  README.md  build.rs  run.sh  shell.nix  test.c
.cargo/: config
src/: main.rs
src/lib/: mod.rs
