[package]
name = "core"
version = "0.1.0"
authors = ["Xavier L'Heureux <dev.xlheureux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "smov-core"
path = "src/main.rs"

[lib]
name = "smov"
path = "src/lib/mod.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
serialport = "3.3"
opencv = { version = "0.33", optional = true }
structopt = { version = "0.3", optional = true }

[build-dependencies]
cbindgen = "0.13"

[features]
bin = ["structopt"]
vision = ["opencv"]
default = ["bin"]
